--- a/.devcontainer/docker/devcontainer.json
+++ b/.devcontainer/docker/devcontainer.json
@@ -1,10 +1,14 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/miniconda
 {
-	"name": "Miniconda (Python 3)",
+	"name": "Miniconda (Docker Python 3)",
 	"build": { 
-		"context": "..",
-		"dockerfile": "Dockerfile"
+		"context": "../..",
+		"dockerfile": "../Dockerfile",
+		"args": { 
+			"ENV_NAME": "ml-class",
+			"USER_NAME": "vscode"
+		}
 	}
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
