feat: add devcontainer vscode extensions

--- a/.devcontainer/podman/devcontainer.json
+++ b/.devcontainer/podman/devcontainer.json
@@ -21,7 +21,16 @@
 	// "postCreateCommand": "python --version",
 
 	// Configure tool-specific properties.
-	// "customizations": {},
+	"customizations": {
+		"vscode": {
+			"extensions": [
+        		"ms-toolsai.jupyter",
+        		"ms-toolsai.datawrangler",
+        		"PKief.material-icon-theme",
+        		"donjayamanne.python-extension-pack"
+			]
+		}
+	},
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
