--- a/.devcontainer/docker/devcontainer.json
+++ b/.devcontainer/docker/devcontainer.json
@@ -9,7 +9,7 @@
 			"ENV_NAME": "ml-class",
 			"USER_NAME": "vscode"
 		}
-	}
+	},
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
@@ -21,7 +21,16 @@
 	// "postCreateCommand": "python --version",
 
 	// Configure tool-specific properties.
-	// "customizations": {},
+	"customizations": {
+		"vscode": {
+			"extensions": [
+        		"ms-toolsai.jupyter",
+        		"ms-toolsai.datawrangler",
+        		"PKief.material-icon-theme",
+        		"donjayamanne.python-extension-pack"
+			]
+		}
+	},
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
